// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountListItem renders AccountListItem component and shows account name, address, and balance for non-EVM account: non-EVM-account-list-item 1`] = `
<div>
  <div
    class="mm-box multichain-account-list-item items-center multichain-account-list-item--clickable mm-box--padding-4 mm-box--display-flex mm-box--background-color-transparent"
    data-testid="account-item"
  >
    <div
      class="mm-box flex w-full gap-2 items-center"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--sm:display-none"
        data-testid="account-list-item-badge"
      >
        <button
          class="mm-box multichain-badge-status pr-1 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--background-color-transparent"
          data-testid="multichain-badge-status"
        >
          <div>
            <div
              aria-describedby="tippy-tooltip-3"
              class=""
              data-original-title="Not connected"
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <div
                class="mm-box mm-badge-wrapper mm-box--display-inline-block"
              >
                <div
                  class="items-center justify-center overflow-hidden bg-section rounded-full h-8 w-8 flex"
                >
                  <div
                    class="flex [&>div]:!rounded-none"
                  />
                </div>
                <div
                  class="mm-box mm-badge-wrapper__badge-container"
                  style="bottom: -10%; right: -20%;"
                >
                  <div
                    class="mm-box multichain-badge-status__badge mm-box--background-color-icon-alternative mm-box--rounded-full mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
                  />
                </div>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="mm-box mm-box--display-none mm-box--sm:display-flex"
      >
        <div
          class="inline-flex items-center justify-center overflow-hidden bg-section rounded-full h-8 w-8"
        >
          <div
            class="flex [&>div]:!rounded-none"
          />
        </div>
      </div>
      <div
        class="mm-box multichain-account-list-item__content mm-box--display-flex mm-box--flex-direction-column"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-column"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box multichain-account-list-item__account-name mm-box--margin-inline-end-2 mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
            >
              <button
                class="mm-box mm-text multichain-account-list-item__account-name__button mm-text--body-md-medium mm-text--ellipsis mm-text--text-align-left mm-box--padding-0 mm-box--width-full mm-box--color-text-default mm-box--background-color-transparent"
              >
                Test Account
              </button>
            </div>
            <div
              class="mm-box mm-text multichain-account-list-item__asset mm-text--body-md mm-text--ellipsis mm-text--text-align-end mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-flex-end mm-box--align-items-center mm-box--color-text-default"
            >
              <div
                class="mm-box currency-display-component mm-box--display-flex mm-box--flex-wrap-wrap mm-box--align-items-center"
                data-testid="first-currency-display"
                title="$100,000.00"
              >
                <span
                  class="mm-box mm-text currency-display-component__text mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
                  data-testid="account-value-and-suffix"
                >
                  $100,000.00
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
              data-testid="account-list-address"
            >
              bc1qn3s...5eker
            </p>
          </div>
          <div
            class="mm-box network-indicator"
          >
            <div
              class="mm-box"
              data-testid="account-network-indicator"
            >
              <div>
                <div
                  aria-describedby="tippy-tooltip-4"
                  class=""
                  data-original-title="This can be changed in "Settings > Alerts""
                  data-tooltipped=""
                  style="display: inline;"
                  tabindex="0"
                >
                  <div
                    class="mm-box multichain-avatar-group mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                    data-testid="avatar-group"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--flex-direction-row"
        >
          <div
            class="mm-box mm-tag mm-box--padding-right-1 mm-box--padding-left-1 mm-box--display-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-pill mm-box--border-color-border-default mm-box--border-width-1 box--border-style-solid"
            data-testid="account-list-item-tag-b7893c59-e376-4cc0-93ad-05ddaab574a6-Native SegWit"
          >
            <p
              class="mm-box mm-text mm-text--body-xs mm-box--color-text-alternative"
            >
              Native SegWit
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center"
    />
  </div>
</div>
`;

exports[`AccountListItem renders AccountListItem component and shows account name, address, and balance: evm-account-list-item 1`] = `
<div>
  <div
    class="mm-box multichain-account-list-item items-center multichain-account-list-item--clickable mm-box--padding-4 mm-box--display-flex mm-box--background-color-transparent"
    data-testid="account-item"
  >
    <div
      class="mm-box flex w-full gap-2 items-center"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--sm:display-none"
        data-testid="account-list-item-badge"
      >
        <button
          class="mm-box multichain-badge-status pr-1 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--background-color-transparent"
          data-testid="multichain-badge-status"
        >
          <div>
            <div
              aria-describedby="tippy-tooltip-1"
              class=""
              data-original-title="Not connected"
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <div
                class="mm-box mm-badge-wrapper mm-box--display-inline-block"
              >
                <div
                  class="items-center justify-center overflow-hidden bg-section rounded-full h-8 w-8 flex"
                >
                  <div
                    class="flex [&>div]:!rounded-none"
                  />
                </div>
                <div
                  class="mm-box mm-badge-wrapper__badge-container"
                  style="bottom: -10%; right: -20%;"
                >
                  <div
                    class="mm-box multichain-badge-status__badge mm-box--background-color-icon-alternative mm-box--rounded-full mm-box--border-color-background-default mm-box--border-width-2 box--border-style-solid"
                  />
                </div>
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="mm-box mm-box--display-none mm-box--sm:display-flex"
      >
        <div
          class="inline-flex items-center justify-center overflow-hidden bg-section rounded-full h-8 w-8"
        >
          <div
            class="flex [&>div]:!rounded-none"
          />
        </div>
      </div>
      <div
        class="mm-box multichain-account-list-item__content mm-box--display-flex mm-box--flex-direction-column"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-column"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
          >
            <div
              class="mm-box multichain-account-list-item__account-name mm-box--margin-inline-end-2 mm-box--display-flex mm-box--gap-2 mm-box--align-items-center"
            >
              <button
                class="mm-box mm-text multichain-account-list-item__account-name__button mm-text--body-md-medium mm-text--ellipsis mm-text--text-align-left mm-box--padding-0 mm-box--width-full mm-box--color-text-default mm-box--background-color-transparent"
              >
                Test Account
              </button>
            </div>
            <div
              class="mm-box mm-text multichain-account-list-item__asset mm-text--body-md mm-text--ellipsis mm-text--text-align-end mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-flex-end mm-box--align-items-center mm-box--color-text-default"
            >
              <div
                class="mm-box currency-display-component mm-box--display-flex mm-box--flex-wrap-wrap mm-box--align-items-center"
                data-testid="first-currency-display"
                title="0.006 ETH"
              >
                <span
                  class="mm-box mm-text currency-display-component__text mm-text--inherit mm-text--ellipsis mm-box--color-text-default"
                  data-testid="account-value-and-suffix"
                >
                  0.006
                </span>
                <span
                  class="mm-box mm-text currency-display-component__suffix mm-text--inherit mm-box--margin-inline-start-1 mm-box--color-text-default"
                >
                  ETH
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--justify-content-space-between"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
              data-testid="account-list-address"
            >
              0x0DCD5...3E7bc
            </p>
          </div>
          <div
            class="mm-box network-indicator"
          >
            <div
              class="mm-box"
              data-testid="account-network-indicator"
            >
              <div>
                <div
                  aria-describedby="tippy-tooltip-2"
                  class=""
                  data-original-title="This can be changed in "Settings > Alerts""
                  data-tooltipped=""
                  style="display: inline;"
                  tabindex="0"
                >
                  <div
                    class="mm-box multichain-avatar-group mm-box--display-flex mm-box--gap-1 mm-box--align-items-center"
                    data-testid="avatar-group"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <div
                        class="mm-box mm-box--rounded-full"
                        style="margin-left: 0px;"
                      >
                        <div
                          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                        >
                          <img
                            alt="Polygon logo"
                            class="mm-avatar-network__network-image"
                            src="./images/pol-token.svg"
                          />
                        </div>
                      </div>
                      <div
                        class="mm-box mm-box--rounded-full"
                        style="margin-left: -8px;"
                      >
                        <div
                          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                        >
                          <img
                            alt="BNB Chain logo"
                            class="mm-avatar-network__network-image"
                            src="./images/bnb.svg"
                          />
                        </div>
                      </div>
                      <div
                        class="mm-box mm-box--rounded-full"
                        style="margin-left: -8px;"
                      >
                        <div
                          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                        >
                          G
                        </div>
                      </div>
                      <div
                        class="mm-box mm-box--rounded-full"
                        style="margin-left: -8px;"
                      >
                        <div
                          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                        >
                          <img
                            alt="Custom Mainnet RPC logo"
                            class="mm-avatar-network__network-image"
                            src="./images/eth_logo.svg"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="mm-box"
                    >
                      <p
                        class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
                      >
                        +1
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center"
    />
  </div>
</div>
`;
